[workspace]
members = ["dilithium", "hdwallet", "tests"]
resolver = "2"

[workspace.dependencies]
bip39 = { version = "2.0.0", default-features = false }
criterion = { version = "0.5.1", features = ["html_reports"] }
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
nam-tiny-hderive = { version = "0.3.1-nam.0", default-features = false }
qp-poseidon-core = { version = "1.0.1" }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.9.0-beta.1", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
rusty-crystals-integration-tests = { path = "./tests" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
thiserror = { version = "2.0.4", default-features = false }
