[package]
name = "qp-rusty-crystals-dilithium"
version = "1.0.3"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of CRYSTALS-Dilithium digital signature scheme"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"dilithium",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[[example]]
name = "stack_usage_demo"
path = "examples/stack_usage_demo.rs"

[dependencies]
sha2 = { version = "0.10.8", default-features = false }
subtle = { version = "2.4.1", default-features = false }

# Constant-time testing (optional for binaries)
dudect-bencher = { version = "0.6", optional = true }
aes = "0.8"
cipher = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = { version = "0.7.3" }

[[bench]]
name = "dilithium_benchmarks"
harness = false

[[bin]]
name = "ct_bench"
required-features = ["ct-testing"]

[features]
default = []
ct-testing = ["dudect-bencher"]
