[package]
name = "qp-rusty-crystals-hdwallet"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of HD wallet functionality with post-quantum cryptography"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"hdwallet",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[dependencies]
qp-rusty-crystals-dilithium = { path = "../dilithium", version = "1.0.3", default-features = false }
rand_core.workspace = true
rand_chacha.workspace = true
bip39.workspace = true
thiserror.workspace = true
qp-poseidon-core.workspace = true
hex-literal.workspace = true
nam-tiny-hderive.workspace = true
serde_json.workspace = true
hex.workspace = true
serde.workspace = true

[dev-dependencies]
hex-literal.workspace = true
rand.workspace = true
