[package]
name = "rusty-crystals-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
getrandom.workspace = true
qp-rusty-crystals-dilithium = { path = "../dilithium", version = "1.0.3", default-features = true }
qp-rusty-crystals-hdwallet = { path = "../hdwallet", version = "0.1.5", default-features = true }
rand = { workspace = true, features = ["std", "std_rng"] }
